--- a/app/src/main/res/layout/maininterface.xml
+++ b/app/src/main/res/layout/maininterface.xml
@@ -67,7 +67,7 @@
                 tools:layout_editor_absoluteY="288dp" />
 
             <android.widget.Button
-                android:id="@+id/btn_boardcast"
+                android:id="@+id/btn_db"
                 android:layout_width="120dp"
                 android:layout_height="60dp"
                 android:layout_alignParentEnd="true"
